Fix spacing and title (DEV-25)

--- a/devias-web/src/Components/ProjectDetails/ProjectDetails.scss
+++ b/devias-web/src/Components/ProjectDetails/ProjectDetails.scss
@@ -1,7 +1,7 @@
 .project-detail {
   display: flex;
   flex-direction: row;
-  margin-top: 52px;
+  margin-top: 85px;
   
   .project-thumbnail {
     width: 33.33%;
