--- a/devias-web/src/Screens/Home/Home.scss
+++ b/devias-web/src/Screens/Home/Home.scss
@@ -97,7 +97,7 @@
             padding: 48px;
             border-radius: 10px;
             min-height: 370px;
-            background-image: url(../../assets/background-design.png);
+            background-image: url(Assets/background-design.png);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: right;
@@ -137,11 +137,14 @@
         }
       }
     }
+    @media (max-width: 991px){
+      margin-bottom: 80px;
+    }
   }
   .HighlightedProject{
       padding: 115px 0 115px 0;
       color: #FFFFFF !important;
-      background-image: url(../../Assets/background.png);
+      background-image: url(Assets/background.png);
       background-repeat: no-repeat;
       background-size: cover;
       h2{
@@ -149,8 +152,7 @@
         font-family: 'Ubuntu', sans-serif;
         font-weight: 500;
         @media (max-width: 991px){
-          color: #333;
-          font-size: 2rem;
+          font-size: 2.5rem;
       }
       }
   }
