--- a/devias-web/src/Screens/OurCustomers/Customer/Customer.scss
+++ b/devias-web/src/Screens/OurCustomers/Customer/Customer.scss
@@ -146,8 +146,7 @@
       font-weight: 500;
 
       @media (max-width: 991px) {
-        color: #333;
-        font-size: 2rem;
+        font-size: 2.5rem;
       }
     }
   }
