--- a/devias-web/src/Screens/OurCustomers/OurCustomers.scss
+++ b/devias-web/src/Screens/OurCustomers/OurCustomers.scss
@@ -35,8 +35,6 @@
   }
 
   .info {
-    margin-bottom: 5rem;
-
     .container {
       .container-card {
         width: 100%;
